--- a/src/produktoversikt/entry.njk
+++ b/src/produktoversikt/entry.njk
@@ -14,12 +14,7 @@
 
 {% extends 'base.njk' %}
 
-{% block script %}
-  <script src="/main.min.js" type="text/javascript" defer></script>
-{% endblock %}
-
 {% block content %}
-  {% include "partials/header.njk" %}
 
   <main class="min-h-[50vh]">
     <div class="grid grid-cols-layout">
@@ -45,5 +40,7 @@
     </div>
   </main>
 
-  {% include "partials/footer.njk" %}
 {% endblock %}
+
+{% block styles %}{% endblock %}
+{% block script %}{% endblock %}
