--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -68,24 +68,35 @@
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
       }
     </style>
+    <script src="/main.min.js" type="text/javascript" defer></script>
     <link rel="stylesheet" href="/main.min.css" type="text/css" />
     {% block styles %}{% endblock %}
     {% block script %}{% endblock %}
   </head>
-  <body class="min-h-full overflow-y-scroll overflow-x-hidden {{ bodyClass }}" x-data="{ menuOpen: false, notifyOpen: false, toggleScroll: false }">
-    {% block content %}{% endblock %}
+  <body
+    class="min-h-full overflow-y-scroll overflow-x-hidden {{ bodyClass }}"
+    x-data="{
+      indexOpen: false,
+      menuOpen: false,
+      notifyOpen: false
+    }">
 
-    {% if page.url != "/" %}
-      <div class="fixed z-50 pt-px pr-px transition-all duration-300 motion-safe:-translate-x-full motion-safe:translate-y-full bg-purple-300/80 -bottom-6 -left-6 motion-safe:animate-enter hover:-bottom-5 hover:-left-5" style="clip-path: polygon(0 0, 100% 100%, 0 100%)">
-        <a class="grid pt-24 pb-8 pl-8 pr-24 text-white bg-purple-500 hover:bg-purple-300 place-items-center bg-gradient-to-tr from-purple-500/80 to-purple-900/80" style="clip-path: polygon(0 0, 100% 100%, 0 100%)" href="/">
-          <svg class="w-6 h-6 translate-x-2.5 -translate-y-2.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-linecap="round" stroke-width="2" aria-hidden="true" focusable="false" role="img">
-            <path  d="M4.5 9H16a5 5 0 0 1 5 5v0a5 5 0 0 1-5 5h-1.5" />
-            <path stroke-linejoin="round" d="M8.5 4.5 4 9l4.5 4.5" />
-          </svg>
-          <span class="sr-only">Tilbake til oversikten</span>
-        </a>
+    <div class="font-mono text-3xl text-white bg-blue-700">
+      <div class="grid overflow-hidden transition-all duration-200 grid-cols-layout" x-bind:class="indexOpen ? 'max-h-[60vh]' : 'max-h-0'">
+        <ul class="grid py-8 divide-y divide-blue-300/25 col-feature">
+        {% for page in collections.template | sort(false, false, 'data.order') %}
+          <li class="py-4">
+            <a href="{{ page.url }}" class="hover:text-orange-300 hover:underline">
+              <span class="w-5">{{ '0' if page.data.order < 10 }}{{ page.data.order }}</span>
+            {{ page.data.title | safe }}
+            </a>
+          </li>
+        {% endfor %}
+        </ul>
       </div>
-    {% endif %}
-
+    </div>
+    {% include "partials/header.njk" %}
+    {% block content %}{% endblock %}
+    {% include "partials/footer.njk" %}
   </body>
 </html>
