--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,4 @@
-<footer class="grid self-end pb-20 text-lg text-white bg-deepblue-800 grid-cols-layout" x-bind:inert="menuOpen || notifyOpen">
+<footer class="grid self-end pb-12 text-lg text-white bg-deepblue-800 grid-cols-layout" x-bind:inert="menuOpen || notifyOpen">
   <div class="col-feature">
     <div class="flex flex-col items-center py-3">
       <a class="flex items-center gap-2 text-base text-center hover:underline hover:text-orange-200" href="#">
@@ -35,7 +35,7 @@
 
     </div>
 
-    <div class="flex flex-col justify-between pb-12 md:flex-row-reverse">
+    <div class="flex flex-col justify-between md:flex-row-reverse">
       <div class="flex flex-col justify-between gap-3 mt-4 md:gap-6 md:flex-row md:self-end">
         {% for link in footer.legal %}
           <a class="hover:underline hover:text-orange-200" href="#">{{ link.text }}</a>
