--- a/src/produktoversikt/produktoversikt.njk
+++ b/src/produktoversikt/produktoversikt.njk
@@ -8,15 +8,7 @@ bodyClass: ''
 ---
 {% extends 'base.njk' %}
 
-{% block styles %}{% endblock %}
-
-{% block script %}
-  <script src="/main.min.js" type="text/javascript" defer></script>
-{% endblock %}
-
 {% block content %}
-  {% include "partials/header.njk" %}
-
   <main class="text-lg text-gray-900 place-self-stretch">
     <div class="grid py-8 bg-white grid-cols-layout md:pt-12 md:pb-16">
       <div class="relative col-popout sm:mx-auto md:mx-0 sm:max-w-prose md:max-w-none">
@@ -112,7 +104,7 @@ bodyClass: ''
       </div>
     </div>
   </main>
-
-{% include "partials/footer.njk" %}
-
 {% endblock %}
+
+{% block styles %}{% endblock %}
+{% block script %}{% endblock %}
