--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,4 @@
-<footer class="grid self-end pb-12 text-lg text-white bg-deepblue-800 grid-cols-layout" x-bind:inert="menuOpen || notifyOpen">
+<footer class="grid self-end pb-8 text-lg text-white bg-deepblue-800 grid-cols-layout" x-bind:inert="menuOpen || notifyOpen">
   <div class="col-feature">
     <div class="flex flex-col items-center py-3">
       <a class="flex items-center gap-2 text-base text-center hover:underline hover:text-orange-200" href="#">
@@ -9,7 +9,7 @@
       </a>
     </div>
     <div class="pt-8 border-t border-white/10">
-      <div class="mb-8 sm:columns-2 md:columns-3">
+      <div class="sm:columns-2 md:columns-3">
         {% for section in footer.links %}
           <div class="mb-8 sm:pr-8 md:mb-0">
             <h2 class="text-sm font-semibold tracking-widest uppercase text-deepblue-300">
@@ -35,14 +35,14 @@
 
     </div>
 
-    <div class="flex flex-col justify-between md:flex-row-reverse">
-      <div class="flex flex-col justify-between gap-3 mt-4 md:gap-6 md:flex-row md:self-end">
+    <div class="flex flex-col justify-between mt-6 sm:flex-row-reverse">
+      <div class="flex flex-col justify-between gap-3 mt-6 sm:gap-6 sm:flex-row sm:self-end">
         {% for link in footer.legal %}
           <a class="hover:underline hover:text-orange-200" href="#">{{ link.text }}</a>
         {% endfor %}
       </div>
 
-      <div class="grid gap-2 mt-12">
+      <div class="grid gap-2 mt-16">
         {{ '/src/_includes/svg/logo.svg' | svgContents('h-6') | safe }}
         <div class="">Arbeids- og velferdsetaten</div>
       </div>
