--- a/src/produktoversikt/produktoversikt.njk
+++ b/src/produktoversikt/produktoversikt.njk
@@ -10,10 +10,10 @@ bodyClass: ''
 
 {% block content %}
   <main
-    class="text-lg text-gray-900 place-self-stretch"
+    class="text-lg text-gray-900"
     x-data="{
-      categoryFilter: 'Alle',
-      domainFilter: 'Alle',
+      categoryFilter: new URLSearchParams(location.search).get('category') || 'Alle',
+      domainFilter: new URLSearchParams(location.search).get('domain') || 'Alle',
       show_item(el) {
         return (
           (this.categoryFilter === 'Alle'
@@ -23,20 +23,27 @@ bodyClass: ''
         )
       }
     }"
-  >
+    x-init="
+      $watch('categoryFilter', (value) => {
+        const url = new URL(window.location.href);
+        url.searchParams.set('category', value);
+        history.pushState(null, document.title, url.toString());
+      });
+      $watch('domainFilter', (value) => {
+        const url = new URL(window.location.href);
+        url.searchParams.set('domain', value);
+        history.pushState(null, document.title, url.toString());
+      });"
+    >
     <div class="grid py-8 bg-white grid-cols-layout md:py-12">
       <div class="relative col-popout">
 
         <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">Søknad og skjema fra A&nbsp;til&nbsp;Å</h1>
         <p class="mt-3 md:mt-6 max-w-prose">Pengestøtter og tjenester fra NAV for privatpersoner. Du kan søke eller sortere på område og kategori.</p>
+
         <div class="absolute hidden top-3 right-12 md:block">
           {{ '/src/_includes/svg/pictogram-support.svg' | svgContents('w-32 h-32') | safe }}
         </div>
-
-        {# <div class="fixed p-3 text-white bg-red-500/90 left-4 bottom-4">
-          <div>Category: <span x-text="categoryFilter" /></div>
-          <div>Domain: <span x-text="domainFilter" /></div>
-        </div> #}
 
         <aside class="grid items-start gap-8 mt-8">
           {% set labelClasses = "inline-flex cursor-pointer px-4 pt-1.5 pb-1.5 leading-tight text-base bg-gray-100 ring-1 ring-gray-200/25 rounded-full hover:bg-orange-100" %}
@@ -96,14 +103,13 @@ bodyClass: ''
     </div>
 
     <div class="grid pt-8 pb-20 bg-gray-100 grid-cols-layout md:pt-12">
-      <div class="col-popout">
+      <div class="col-popout max-w-prose">
 
         <div class="hidden">
           <label for="fiiilter" class="font-semibold">Søk</label>
           <input id="fiiilter" type="text" class="w-full px-4 py-3 bg-white border rounded-lg shadow-inner focus:outline-none focus:ring focus:ring-gray-600 border-gray-300/50">
         </div>
 
-        <h2 class="text-2xl"><strong>{{ products.length }} søknader og skjema</strong>, ingen avgrensning er valgt</h2>
         <div class="grid mt-3 bg-white divide-y divide-gray-200 rounded-lg shadow">
           {% for product in products %}
             {% include "partials/product-item.njk" %}
